--- a/pom.xml
+++ b/pom.xml
@@ -61,7 +61,7 @@
                         <!-- Default configuration for running with: mvn clean javafx:run -->
                         <id>default-cli</id>
                         <configuration>
-                            <mainClass>com.example.spotify_clone/dk.easv.MyTunes.Main</mainClass>
+                            <mainClass>com.example.MyTunes_Light/dk.easv.MyTunes.Main</mainClass>
                             <launcher>app</launcher>
                             <jlinkZipName>app</jlinkZipName>
                             <jlinkImageName>app</jlinkImageName>
